// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FetchAuthenticators should render component with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-mb7"
      >
        <mock-styled.div
          classname="el-button-group-align-center"
        >
          <mock-styled.button
            classname="el-intent-primary"
            disabled="true"
          >
            <mock-styled.div />
            Fetch Current Authenticators
          </mock-styled.button>
          <mock-styled.button
            classname="el-intent-primary"
          >
            <mock-styled.div />
            Reset Password
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="el-mb11 el-fade-in"
      >
        <mock-styled.div
          classname=""
        >
          <mock-styled.h2
            classname="el-text-base el-has-no-margin"
          >
            Authenticator Type
          </mock-styled.h2>
          <mock-styled.p
            classname="el-text-base el-has-grey-text el-has-no-margin"
          >
            Authenticator App
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.h2
            classname="el-text-base el-has-no-margin"
          >
            Status
          </mock-styled.h2>
          <mock-styled.p
            classname="el-text-base el-has-grey-text el-has-no-margin"
          >
            Active
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.h2
            classname="el-text-base el-has-no-margin"
          >
            Created
          </mock-styled.h2>
          <mock-styled.p
            classname="el-text-base el-has-grey-text el-has-no-margin"
          >
            11/11/2022 11:03
          </mock-styled.p>
        </mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.h2
            classname="el-text-base el-has-no-margin"
          >
            Last Updated
          </mock-styled.h2>
          <mock-styled.p
            classname="el-text-base el-has-grey-text el-has-no-margin"
          >
            11/11/2022 11:03
          </mock-styled.p>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.button
        classname="el-intent-primary"
      >
        <mock-styled.div />
        Reset Authenticator
      </mock-styled.button>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-mb7"
    >
      <mock-styled.div
        classname="el-button-group-align-center"
      >
        <mock-styled.button
          classname="el-intent-primary"
          disabled="true"
        >
          <mock-styled.div />
          Fetch Current Authenticators
        </mock-styled.button>
        <mock-styled.button
          classname="el-intent-primary"
        >
          <mock-styled.div />
          Reset Password
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname="el-mb11 el-fade-in"
    >
      <mock-styled.div
        classname=""
      >
        <mock-styled.h2
          classname="el-text-base el-has-no-margin"
        >
          Authenticator Type
        </mock-styled.h2>
        <mock-styled.p
          classname="el-text-base el-has-grey-text el-has-no-margin"
        >
          Authenticator App
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.h2
          classname="el-text-base el-has-no-margin"
        >
          Status
        </mock-styled.h2>
        <mock-styled.p
          classname="el-text-base el-has-grey-text el-has-no-margin"
        >
          Active
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.h2
          classname="el-text-base el-has-no-margin"
        >
          Created
        </mock-styled.h2>
        <mock-styled.p
          classname="el-text-base el-has-grey-text el-has-no-margin"
        >
          11/11/2022 11:03
        </mock-styled.p>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.h2
          classname="el-text-base el-has-no-margin"
        >
          Last Updated
        </mock-styled.h2>
        <mock-styled.p
          classname="el-text-base el-has-grey-text el-has-no-margin"
        >
          11/11/2022 11:03
        </mock-styled.p>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.button
      classname="el-intent-primary"
    >
      <mock-styled.div />
      Reset Authenticator
    </mock-styled.button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FetchAuthenticators should render component with no data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-mb7"
      >
        <mock-styled.div
          classname="el-button-group-align-center"
        >
          <mock-styled.button
            classname="el-intent-primary"
            disabled="true"
          >
            <mock-styled.div />
            Fetch Current Authenticators
          </mock-styled.button>
          <mock-styled.button
            classname="el-intent-primary"
          >
            <mock-styled.div />
            Reset Password
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-mb7"
    >
      <mock-styled.div
        classname="el-button-group-align-center"
      >
        <mock-styled.button
          classname="el-intent-primary"
          disabled="true"
        >
          <mock-styled.div />
          Fetch Current Authenticators
        </mock-styled.button>
        <mock-styled.button
          classname="el-intent-primary"
        >
          <mock-styled.div />
          Reset Password
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FetchAuthenticators should render component with props and loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.div
        classname="el-mb7"
      >
        <mock-styled.div
          classname="el-button-group-align-center"
        >
          <mock-styled.button
            classname="el-intent-primary el-is-loading"
            disabled="true"
          >
            <mock-styled.div />
            Fetch Current Authenticators
          </mock-styled.button>
          <mock-styled.button
            classname="el-intent-primary"
          >
            <mock-styled.div />
            Reset Password
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.div
      classname="el-mb7"
    >
      <mock-styled.div
        classname="el-button-group-align-center"
      >
        <mock-styled.button
          classname="el-intent-primary el-is-loading"
          disabled="true"
        >
          <mock-styled.div />
          Fetch Current Authenticators
        </mock-styled.button>
        <mock-styled.button
          classname="el-intent-primary"
        >
          <mock-styled.div />
          Reset Password
        </mock-styled.button>
      </mock-styled.div>
    </mock-styled.div>
    <mock-styled.div
      classname=""
    >
      <mock-styled.div>
        <mock-styled.div />
      </mock-styled.div>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
